--- a/photos.html
+++ b/photos.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="photo-menu.css">
     <title>fillianaire</title>
 </head>
 <body>
@@ -33,7 +34,19 @@
           <a href="https://www.youtube.com/channel/UCQBaSoXet11u28DMg-S-32A"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg></a>
         </div>
     </div>
-    <h1>misc</h1>
+    <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+      <ul class="mobile-menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="photos.html">Photos</a></li>
+        <li><a href="store.html">Store</a></li>
+        <li><a href="join-email-list-here.html">Join Email List here!!</a></li>
+      </ul>
+    </div>
   </header>
+  <h1>misc</h1>
+  <script src="admin.js"></script>
 </body>
 </html>
